--- a/frontend/infrastructure/visualization-frontend/values.yaml
+++ b/frontend/infrastructure/visualization-frontend/values.yaml
@@ -4,15 +4,12 @@
 
 replicaCount: 1
 
-name: frontend
+name: visualization-frontend
 env: staging
-maxReplicas: 10
-memoryUsage: 90
-cpuUsage: 80
 
 image:
-  registry: chegaai
-  name: frontend
+  registry: khaosdoctor
+  name: visualization-frontend
   tag: v1.0.0
   pullPolicy: IfNotPresent
 
@@ -25,7 +22,7 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: addon-http-application-routing
-  hostname: chega.ai
+  hostname: localhost
 
 environment: {}
 
@@ -34,5 +31,5 @@ resources:
     cpu: 250m
     memory: 128M
   limits:
-    cpu: 500m
+    cpu: 250m
     memory: 256M
