--- a/frontend/infrastructure/visualization-frontend/templates/deployment.yaml
+++ b/frontend/infrastructure/visualization-frontend/templates/deployment.yaml
@@ -24,9 +24,13 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: API_URL
+              value: {{ required "A valid backend API URL is needed" .Values.environment.API_URL | quote }}
